--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,16 @@
 #container a {
   text-decoration: none;
 }
+
+.title-logo{
+  margin-left: 20%;
+}
+
+.logo{
+  color: #3780ff;
+  font-size: 25px;
+}
+
+.buttons-login{
+  margin-right: 20%;
+}
