--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -9,5 +9,5 @@
   </ion-toolbar>
 </ion-header>
 <ion-content class="contenedor">
-  <img src="https://2.bp.blogspot.com/-YcopooG4e_o/VC2catP_FOI/AAAAAAAACow/zq8skqYQtRI/s1600/foo.jpg" class="img_total"/>
+  <img src="{{ image }}" class="img_total"/>
 </ion-content>
