--- a/src/app/events/events.page.scss
+++ b/src/app/events/events.page.scss
@@ -2,3 +2,13 @@
     width: 70%;
     overflow: scroll;
 }
+
+.search_toolbar{
+    margin-top: 2%;
+}
+
+.search_bar{
+    width: 65%;
+    margin: 0 auto;
+    text-align: center;
+}
