--- a/src/app/detail/detail.page.html
+++ b/src/app/detail/detail.page.html
@@ -22,12 +22,12 @@
           <ion-item>
             <ion-icon name="calendar-outline" slot="start"></ion-icon>
             <ion-label>Fecha: </ion-label>
-            {{ detail.date }}
+            {{ getDate() }}
           </ion-item>
           <ion-item>
             <ion-icon name="time-outline" slot="start"></ion-icon>
             <ion-label>Hora: </ion-label>
-            {{ detail.date }}
+            {{ getHours() }}
           </ion-item>
           <ion-item>
             <ion-icon name="copy-outline" slot="start"></ion-icon>
