--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,7 +6,7 @@
       </ion-button>
     </ion-buttons>
     <ion-buttons slot="end" class="buttons-login">
-      <ion-button color="light" fill="solid">
+      <ion-button color="light" fill="solid" (click)="presentLoginModal()">
         Iniciar Sesión
       </ion-button>
       <ion-button color="primary" fill="solid">
