feat. All Order

--- a/src/app/detail/detail.page.html
+++ b/src/app/detail/detail.page.html
@@ -74,7 +74,7 @@
         <ion-col size-sm=12 size-md=3>
           <ion-list lines="none">
             <ion-item>
-              <ion-button color="primary" size="default" style="width: 100%;" [disabled]="form.invalid">Comprar</ion-button>
+              <ion-button color="primary" size="default" style="width: 100%;" [disabled]="form.invalid" (click)="order()">Ordenar</ion-button>
             </ion-item>
           </ion-list>
         </ion-col>
