--- a/src/app/payment/payment.page.html
+++ b/src/app/payment/payment.page.html
@@ -5,7 +5,7 @@
   <ion-grid class="box">
     <ion-row>
       <ion-col size-md="7" size-sm="12" class="box-data-order">
-          <app-data-contact (change)="getPrice($event)" ></app-data-contact>
+          <app-data-contact (change)="getPrice($event)" (doPay)="presentModal()"></app-data-contact>
       </ion-col>
       <ion-col size-md="5" size-sm="12">
         <app-cart [cartInfo]="cartInfo"></app-cart>
