--- a/src/app/components/pay/pay.component.html
+++ b/src/app/components/pay/pay.component.html
@@ -53,7 +53,7 @@
       </ion-row>
     </form>
     <ion-row class="box_button">
-      <ion-button class="btn-sucess" color="primary" (click)="pay()">GENERAR PAGO</ion-button>
+      <ion-button class="btn-sucess" color="primary" (click)="pay()" [disabled]="form.invalid">GENERAR PAGO</ion-button>
     </ion-row>
   </ion-grid>
 </ion-content>
