--- a/src/app/components/data-contact/data-contact.component.html
+++ b/src/app/components/data-contact/data-contact.component.html
@@ -106,6 +106,6 @@
     </form>
   </ion-row>
   <ion-row>
-    <ion-button class="btn-sucess" color="primary" (click)="pay()">PAGAR</ion-button>
+    <ion-button class="btn-sucess" color="primary" (click)="pay()" [disabled]="validate()">PAGAR</ion-button>
   </ion-row>
 </ion-grid>
