feat. Commit Errors

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,7 +8,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <form [formGroup]="form" (ngSubmit)="login()" novalidate class="login-container">
+  <form [formGroup]="form" novalidate class="login-container">
     <ion-list class="head">
       <img class="img-bic" src="assets/icon/favicon.png" alt="Toures Balón" />
     </ion-list>
