--- a/src/app/detail/detail.page.html
+++ b/src/app/detail/detail.page.html
@@ -43,7 +43,7 @@
       </ion-col>
   </ion-row>
   <ion-card>
-    <form [formGroup]="form" (ngSubmit)="login()" novalidate>
+    <form [formGroup]="form" novalidate>
       <ion-row class="box_buy">
         <ion-col size-sm=12 size-md=3>
           <ion-list>
