--- a/src/app/events/events.page.html
+++ b/src/app/events/events.page.html
@@ -1,6 +1,6 @@
 <!-- Seccion de busqueda -->
 <ion-toolbar class="search_toolbar">
-    <ion-searchbar [animated]='true' debounce="400" (ionChange)="filter($event)" placeholder="Busca tu evento" showCancelButton="never" class="search_bar"></ion-searchbar>
+    <ion-searchbar [animated]='true' debounce="400" placeholder="Busca tu evento" showCancelButton="never" class="search_bar"></ion-searchbar>
 </ion-toolbar>
 <!-- Seccion de busqueda -->
 
