--- a/src/app/plans/plans.page.html
+++ b/src/app/plans/plans.page.html
@@ -1,7 +1,7 @@
 <h1>Holi</h1>
 <!-- Seccion de busqueda -->
 <ion-toolbar class="home__toolbar-search">
-    <ion-searchbar [animated]='true' debounce="400" (ionChange)="filter($event)" placeholder="Busca tu evento"
+    <ion-searchbar [animated]='true' debounce="400" placeholder="Busca tu evento"
       showCancelButton="never"></ion-searchbar>
     <ion-select multiple="true" cancelText="Cancelar" okText="Seleccionar" placeholder="Categoría Evento">
         <ion-select-option value="bacon">Fútbol</ion-select-option>
