--- a/src/app/components/pay/pay.component.html
+++ b/src/app/components/pay/pay.component.html
@@ -3,7 +3,7 @@
     <ion-label>DATOS DE PAGO</ion-label>
   </ion-item>
   <ion-grid>
-    <form [formGroup]="form" (ngSubmit)="login()" class="box" novalidate>
+    <form [formGroup]="form" class="box" novalidate>
       <ion-row>
         <ion-col size-md="8">
           <ion-item class="field">
