--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -4,8 +4,13 @@
     <ion-grid>
       <ion-row>
         <ion-col size-sm=10 size-md=10>
-          <ion-card-subtitle class="subtitle">{{ information.subtitle.toUpperCase() }}</ion-card-subtitle>
+          <ion-card-subtitle class="subtitle">{{ information.category.toUpperCase() }}</ion-card-subtitle>
           <ion-card-title>{{ information.title }}</ion-card-title>
+          <ion-card-title>
+            <div class="star-rating">
+              <span [style.width]="star"></span>
+            </div>
+          </ion-card-title>
         </ion-col>
         <ion-col size-sm=2 size-md=2>
             <ion-icon name="add-circle-outline" class="add_btn"></ion-icon>
@@ -16,10 +21,10 @@
   <ion-card-content>
     <ion-grid>
       <ion-row>
-        {{ information.detail }}
+        {{ information.description }}
       </ion-row>
       <ion-row class="price">
-        <ion-badge color="light">{{ information.getFullPrice() }}</ion-badge>
+        <ion-badge color="light">{{ getFormatPrice(information.price) }}</ion-badge>
       </ion-row>
       <ion-row>
         <ion-button color="primary" size= "small" class="buy_btn" routerLink="/home/detail/{{information.category}}/{{information.id}}">VER DETALLE</ion-button>
