--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,12 +4,20 @@
       <ion-label class="logo">Toures Balón</ion-label>
     </ion-button>
   </ion-buttons>
-  <ion-buttons slot="end" class="buttons-login">
+  <ion-buttons *ngIf="!session" slot="end" class="buttons-login">
     <ion-button color="light" fill="solid" (click)="presentLoginModal()">
       Iniciar Sesión
     </ion-button>
     <ion-button color="primary" fill="solid">
       Registrate
+    </ion-button>
+  </ion-buttons>
+  <ion-buttons *ngIf="session" slot="end" class="buttons-login">
+    <ion-button color="light" fill="solid" (click)="presentLoginModal()">
+      Perfil
+    </ion-button>
+    <ion-button color="primary" fill="solid" (click)="logOut()">
+      Cerrar Sesión
     </ion-button>
   </ion-buttons>
 </ion-toolbar>
