--- a/src/app/default/default.page.html
+++ b/src/app/default/default.page.html
@@ -1,6 +1,13 @@
 <!-- Seccion de busqueda -->
 <ion-toolbar class="search_toolbar">
-  <ion-searchbar [animated]='true' debounce="400" placeholder="Busca tu evento" showCancelButton="never" class="search_bar"></ion-searchbar>
+  <ion-row>
+    <ion-col size-md=10 size-sm=12>
+      <ion-searchbar [animated]='true' debounce="400" placeholder="Busca tu evento" showCancelButton="never" class="search_bar" [(ngModel)]="text"></ion-searchbar>
+    </ion-col>
+    <ion-col size-md=2 size-sm=12>
+      <ion-button color="light" fill="solid" (click)="search()" style="width: 100%;">Buscar</ion-button>
+    </ion-col>
+  </ion-row>
 </ion-toolbar>
 <!-- Seccion de busqueda -->
 
