--- a/src/app/default/default.page.scss
+++ b/src/app/default/default.page.scss
@@ -5,10 +5,12 @@
 
 .search_toolbar{
     margin-top: 2%;
+    width: 65%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.search_bar{
-    width: 65%;
+.search_bar{   
     margin: 0 auto;
     text-align: center;
 }
