--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -13,7 +13,7 @@
           </ion-card-title>
         </ion-col>
         <ion-col size-sm=2 size-md=2>
-            <ion-icon name="add-circle-outline" class="add_btn"></ion-icon>
+            <ion-icon name="add-circle-outline" class="add_btn" (click)="addToCart()"></ion-icon>
         </ion-col>
       </ion-row>
     </ion-grid>
