--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -20,7 +20,7 @@
       <ion-icon name="bed-outline"></ion-icon>
       <ion-label>Hotel</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="cart">
+    <ion-tab-button tab="cart-shop">
       <ion-icon name="cart-outline"></ion-icon>
       <ion-label>Carrito</ion-label>
       <ion-badge>6</ion-badge>
