--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,13 +1,12 @@
 <ion-list class="container_box">
-  <ion-item *ngFor="let key of cartInfo.eventList" lines="none">
+  <ion-item *ngFor="let key of cartInfo" lines="none">
     <ion-thumbnail slot="start" class="img_thumb">
       <ion-img [src]="key.image" class="img_icon"></ion-img>
       <ion-badge class="badge_img">{{ key.quantity }}</ion-badge>
     </ion-thumbnail>
     <ion-label>
       <h2>{{ key.name }}</h2>
-      <h3>{{ key.subName }}</h3>
-      <p>{{ getFormattedPrice(key.price) }}</p>
+      <p>{{ getFormattedPrice(key.unitPrice) }}</p>
     </ion-label>
   </ion-item>
   <ion-item lines="full">
@@ -16,12 +15,12 @@
       <h3>Envío</h3>
     </ion-label>
     <ion-label>
-      <h3 class="text_right">{{ getFormattedPrice(cartInfo.subtotal) }}</h3>
+      <h3 class="text_right">{{ getFormattedPrice(cartInfo.subtotal * cartInfo.quantity) }}</h3>
       <h3 class="text_right">{{ getFormattedPrice(cartInfo.shipping) }}</h3>
     </ion-label>
   </ion-item>
   <ion-item lines="none">
     <ion-label slot=start>Total</ion-label>
-    <ion-label class="text_right">{{ getFormattedPrice(cartInfo.total) }}</ion-label>
+    <ion-label class="text_right">{{ getSubtotal() }}</ion-label>
   </ion-item>
 </ion-list>
