--- a/src/app/components/data-contact/data-contact.component.html
+++ b/src/app/components/data-contact/data-contact.component.html
@@ -21,34 +21,11 @@
   </ion-row>
   <ion-row>
     <ion-col size-md="12">
-      <ion-label>Seleccione su opción de entrega</ion-label>
-      <ion-grid>
-        <ion-row>
-          <ion-col size-md="4">
-            <ion-button class="btn-delivery" color="light" (click)="setShipping('QR')"><ion-icon class="icon" name="qr-code-outline"></ion-icon>Código QR</ion-button>
-          </ion-col>
-          <ion-col size-md="4">
-            <ion-button class="btn-delivery" color="light" (click)="setShipping('TICKET')"><ion-icon class="icon" name="pricetag-outline"></ion-icon>Ticket</ion-button>
-          </ion-col>
-          <ion-col size-md="4">
-            <ion-button class="btn-delivery" color="light" (click)="setShipping('SHIP')"><ion-icon class="icon"  name="home-outline"></ion-icon>Domicilio</ion-button>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
+      <ion-label>Ingrese sus datos de facturación: </ion-label>
     </ion-col>
   </ion-row>
   <ion-row>
-    <form *ngIf="shipping == 'TICKET'" [formGroup]="formTicket" (ngSubmit)="login()" novalidate class="info-data">
-      <ion-col size-md="12">
-        <ion-item class="field" class="roundedInput">
-          <ion-label position="stacked">TIPO ENTREGA:</ion-label>
-          <ion-select (ionChange)="onSelectChange($event)" formControlName="tienda">
-            <ion-select-option *ngFor="let key of shopList" value="{{key.id}}">{{ key.zona + " - " + key.name + " - " + key.direccion }}</ion-select-option>
-          </ion-select>
-        </ion-item>
-      </ion-col>
-    </form>
-    <form *ngIf="shipping == 'SHIP'" [formGroup]="formShipping" (ngSubmit)="login()" novalidate class="info-data">
+    <form [formGroup]="formShipping" novalidate class="info-data">
       <ion-col size-md="12">
         <ion-grid>
           <ion-row>
@@ -106,6 +83,6 @@
     </form>
   </ion-row>
   <ion-row>
-    <ion-button class="btn-sucess" color="primary" (click)="pay()" [disabled]="validate()">PAGAR</ion-button>
+    <ion-button class="btn-sucess" color="primary" (click)="pay()" [disabled]="!formShipping.valid">PAGAR</ion-button>
   </ion-row>
 </ion-grid>
