--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <ion-toolbar>
   <ion-buttons slot="start" class="title-logo">
     <ion-button>
-      <ion-label class="logo">Toures Balón</ion-label>
+      <ion-label class="logo" (click)="home()">Toures Balón</ion-label>
     </ion-button>
   </ion-buttons>
   <ion-buttons *ngIf="!session" slot="end" class="buttons-login">
