--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -15,8 +15,8 @@
       <h3>Envío</h3>
     </ion-label>
     <ion-label>
-      <h3 class="text_right">{{ getFormattedPrice(cartInfo.subtotal * cartInfo.quantity) }}</h3>
-      <h3 class="text_right">{{ getFormattedPrice(cartInfo.shipping) }}</h3>
+      <h3 class="text_right">{{ getSubtotal() }}</h3>
+      <h3 class="text_right">0</h3>
     </ion-label>
   </ion-item>
   <ion-item lines="none">
