--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
     <ion-button color="light" fill="solid" (click)="presentLoginModal()">
       Iniciar Sesión
     </ion-button>
-    <ion-button color="primary" fill="solid">
+    <ion-button color="primary" fill="solid" (click)="presentRegisterModal()">
       Registrate
     </ion-button>
   </ion-buttons>
