--- a/src/app/components/data-contact/data-contact.component.html
+++ b/src/app/components/data-contact/data-contact.component.html
@@ -1,24 +1,13 @@
 <ion-grid class="container_box">
   <ion-row>
     <ion-col size-md="6">
-      <ion-label>Información de Contacto</ion-label>
+      <ion-label>INFORMACIÓN DE PAGO</ion-label>
     </ion-col>
     <ion-col size-md="6" class="subtitle">
-      <ion-label>¿Ya tienes una cuenta? <a>Inicia Sesión</a></ion-label>
+      <!--<ion-label>¿Ya tienes una cuenta? <a>Inicia Sesión</a></ion-label>-->
     </ion-col>
   </ion-row>
-  <ion-row>
-    <ion-col size-md="12">
-      <ion-item class="field roundedInput">
-        <ion-label position="floating">Correo de contacto</ion-label>
-        <ion-input name="user"></ion-input>
-      </ion-item>
-      <ion-item lines="none">
-        <ion-label class="check">Mantenme informado de promociones exclusivas y noticias.</ion-label>
-        <ion-checkbox class="check" slot="start" size="small"></ion-checkbox>
-      </ion-item>
-    </ion-col>
-  </ion-row>
+  <br >
   <ion-row>
     <ion-col size-md="12">
       <ion-label>Ingrese sus datos de facturación: </ion-label>
@@ -74,7 +63,7 @@
             <ion-col size-md="4">
               <ion-item class="field roundedInput">
                 <ion-label position="stacked">Código Postal</ion-label>
-                <ion-input name="postalCode" formControlName="postalCode" type="text"></ion-input>
+                <ion-input name="postalCode" formControlName="postalCode" type="number"></ion-input>
               </ion-item>
             </ion-col>
           </ion-row>
