--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -37,6 +37,19 @@
     </ion-item>
 
     <ion-row>
+      <ion-col size-md=12>
+        <ion-item class="field">
+          <ion-label position="floating">Correo Electrónico</ion-label>
+          <ion-input name="email" formControlName="email" type="text" required></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+
+    <ion-item *ngIf="form.get('email').hasError()">
+      <p class="danger-text">Este campo es requerido</p>
+    </ion-item>
+
+    <ion-row>
       <ion-col size-md=6>
         <ion-item class="field">
           <ion-label position="floating">Cédula</ion-label>
